<resources>
    <string name="app_name">Lab4_EventHandling</string>
    <string name="labelA">Number A</string>
    <string name="labelB">Number B</string>
    <string name="labelResult">Result</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="ampersand">&amp;</string>
    <string name="multi">*</string>
    <string name="divide">/</string>
</resources>