<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/tv_labelA"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:text="@string/labelA"
        app:layout_constraintBottom_toTopOf="@id/tv_labelB"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/et_A"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_A"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:hint="Enter number a"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@id/et_B"
        app:layout_constraintLeft_toRightOf="@+id/tv_labelA"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_labelB"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:text="@string/labelB"
        app:layout_constraintBottom_toTopOf="@id/tv_result"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/et_B"
        app:layout_constraintTop_toBottomOf="@id/tv_labelA" />

    <EditText
        android:id="@+id/et_B"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:hint="Enter number b"
        app:layout_constraintBottom_toTopOf="@id/tv_value"
        app:layout_constraintLeft_toRightOf="@+id/tv_labelB"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_A" />

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:text="@string/labelResult"
        app:layout_constraintBottom_toTopOf="@id/guideline1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/tv_value"
        app:layout_constraintTop_toBottomOf="@id/tv_labelB" />

    <EditText
        android:id="@+id/tv_value"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toTopOf="@id/guideline1"
        app:layout_constraintLeft_toRightOf="@+id/tv_result"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_B" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="239dp" />

    <Button
        android:id="@+id/btn_plus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:insetLeft="6dp"
        android:insetRight="6dp"
        android:text="@string/plus"
        app:layout_constraintEnd_toStartOf="@+id/btn_minus"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline1" />

    <Button
        android:id="@+id/btn_minus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/minus"
        android:insetLeft="6dp"
        android:insetRight="6dp"
        app:layout_constraintEnd_toStartOf="@+id/btn_combine"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_plus"
        app:layout_constraintTop_toTopOf="@+id/guideline1" />

    <Button
        android:id="@+id/btn_combine"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/ampersand"
        android:insetLeft="6dp"
        android:insetRight="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_minus"
        app:layout_constraintTop_toTopOf="@+id/guideline1" />

    <Button
        android:id="@+id/btn_mult"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:insetLeft="6dp"
        android:insetRight="6dp"
        android:text="@string/multi"
        app:layout_constraintEnd_toStartOf="@+id/btn_div"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_plus" />

    <Button
        android:id="@+id/btn_div"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:insetLeft="6dp"
        android:insetRight="6dp"
        android:text="@string/divide"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_mult"
        app:layout_constraintTop_toBottomOf="@+id/btn_minus" />


</androidx.constraintlayout.widget.ConstraintLayout>